# ergo

./: .coveragerc  .env-example  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  Makefile  PointDensity.ipynb  README.md  exceptions.py  mypy.ini  play_with_dist.py  prediction-dashboard.ipynb  pull_request_template.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ergo.yml
docs/: .readthedocs.yml  Makefile  clean-up-notebook.md  conf.py  contrib.rst  contrib_folder.rst  core_contrib.rst  distributions.rst  foretold.rst  gettingstarted.rst  index.rst  inference.rst  jupyter_colab.rst  metaculus.rst  nbs_contrib.rst  notebook_style.rst  notebooks.rst  predictit.rst  primitives.rst  tips_google_sheets.rst  workflow.rst
ergo/: __init__.py  autoname.py  distributions.py  elicit.py  foretold.py  logistic.py  metaculus.py  metaculus_question.py  ppl.py  predictit.py  scale.py  static.py  theme.py  utils.py
ergo/conditions/: __init__.py  condition.py  crossentropy.py  histogram.py  interval.py  maxentropy.py  mean.py  mode.py  point_density.py  smoothness.py  variance.py  wasserstein.py
ergo/data/: __init__.py  covid19.py
ergo/distributions/: __init__.py  compile.py  conditions.py  constants.py  debug_logistic_fit.ipynb  distribution.py  hist4log.p  histogram.py  location_scale_family.py  logistic.py  logistic_mixture.py  mixture.py  normal.py  normal_mixture.py  optimizable.py  optional_next_step.py  point_density.py  scale.py  static.py  truncate.py  truncated.py  truncated_logistic_mixture.py  types.py
ergo/questions/: __init__.py  binary.py  question.py
investigate_metaculus_api/: log_scale_predictions.py  model_log_scaling.js
ipynbs/: el-paso.ipynb  prediction-dashboard.ipynb  quickstart.ipynb  strip_output.py
notebook/: community_distributions.ipynb
notebooks/: Fitting failure demonstration.ipynb  Supporting Correlations.ipynb  assorted-predictions.ipynb  basic.ipynb  community-distributions.ipynb  community_distributions.ipynb  community_distributions_v2.ipynb  covid-19-active.ipynb  covid-19-average-lockdown.ipynb  covid-19-inference.ipynb  covid-19-lockdowns.ipynb  covid-19-lockdowns.ipynp  covid-19-metaculus.ipynb  covid-19-tests-august-2020.ipynb  el-paso-workflow.ipynb  el-paso.ipynb  ergo-documentation-examples.ipynb  find-linear-questions.ipynb  foretold-submission.ipynb  metac_qs_data.ipynb  pointdensity_demonstration.ipynb  predictit_clean_sweep.ipynb  quickstart.ipynb  rejection_sampling.ipynb  sort-metaculus-questions.ipynb  test-fitting.ipynb  test-mixture-fitting.ipynb
notebooks/el-paso/: brachbach.py  el-paso-no-output-nbconvert.ipynb  el-paso-no-output.ipynb  el-paso-script.py  el-paso-script.txt  krismoore.py  onlyaisth.py  texas_data.py
notebooks/scrubbed/: Fitting failure demonstration.ipynb  (+11 more)
scripts/: scrub_notebooks.py  scrub_src.py
src/: assorted-predictions.ipynb  community-distributions.ipynb  covid-19-active.ipynb  covid-19-inference.ipynb  covid-19-metaculus.ipynb  generative-models.ipynb  strip_output.py
tests/: conftest.py  mocks.py  test_almanis.py  test_conditions.py  test_distributions.py  test_ergo.py  test_foretold.py  test_jax.py  test_logistic.py  test_mem.py  test_metaculus.py  test_normal.py  test_point_density.py  test_ppl.py  test_predictit.py  test_rejection.py  test_scales.py  utils.py
(+34 files in other folders)
