[tool.poetry]
name = "ergo"
version = "0.8.2"
description = ""
authors = ["Ought <team@ought.org>"]

[tool.poetry.dependencies]
python = "3.6.9"
requests = "2.21.0"
torch = "^1.4.0"
dataclasses = "^0.7"
country_converter = "^0.6.7"
tqdm = "^4.43.0"
scipy = "^1.4.1"
pyro-ppl = "^1.3.0"
pendulum = "^2.1.0"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
typing_extensions = "^3.7.4"
jax = ">=0.1.63"
jaxlib = "^0.1.43"
pandas = "~=1.0.0"
pytest-cov = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
data-science-types = "^0.2.6"
autopep8 = "^1.5"
IPython = "^7.13.0"
jupyter = "^1.0.0"
codecov = "^2.0.22"
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
