[tool.poetry]
name = "ergo"
version = "0.8.5"
description = ""
authors = ["Ought <team@ought.org>"]

[tool.poetry.dependencies]
python = "^3.6.8"
requests = "2.21.0"
country_converter = "0.6.7"
tqdm = "4.45.0"
scipy = "1.4.1"
matplotlib = "3.2.1"
seaborn = "0.10.0"
typing_extensions = "3.7.4.2"
jax = "0.1.75"
jaxlib = "0.1.52"
pandas = "1.0.3"
sphinx-autodoc-typehints = "^1.10.3"
plotnine = "^0.6.0"
numpyro = {git = "https://github.com/pyro-ppl/numpyro.git", rev = "cda5fac353d162d34a76cc6b05033e24bd203fa0"}

# Dataclasses only needed on 3.6, was merged into standard library for 3.7+
dataclasses = {version="0.7", python="~3.6"}

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
pendulum = { version = "2.1.0", optional = true }
scikit-learn = { version = "0.22.2", optional = true }
sklearn = {version = "^0.0", optional = true}
fuzzywuzzy = {version = "0.18.0", optional = true}
python-Levenshtein = {version = "0.12.0", optional = true}
"backports.cached-property" = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
data-science-types = "^0.2.6"
autopep8 = "^1.5"
IPython = "^7.13.0"
jupyter = "^1.0.0"
codecov = "^2.0.22"
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}
pytest-cov = "^2.8.1"
isort = "^4.3.21"
sphinx = "^3.0.1"
sphinx_rtd_theme = "^0.4.3"
pytest-dotenv = "^0.4.0"
pytest-xdist = "^1.31.0"
jupyterlab = "^2.1.1"
nbdime = "^2.0.0"
jupytext = "^1.4.2"
ipywidgets = "^7.5.1"
pytest-sugar = "^0.9.3"

[tool.poetry.extras]
notebooks = [
                "pendulum",
                "scikit-learn",
                "sklearn",
                "fuzzywuzzy",
                "python-Levenshtein"
            ]

[build-system]
requires = ["poetry>=0.12", "setuptools>=47.1.1,<50"]
build-backend = "poetry.masonry.api"
